# agentic-llm-eval

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  MANIFEST.in  METRICS.md  Makefile  PROJECT_REVIEW.md  PROJECT_STRUCTURE.md  README.md  RL_GUIDE.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: config.json  example_config.json
docs/: API.md  ARCHITECTURE.md  METHODS_AND_LIMITATIONS.md  THEORY.md
examples/: README.md  advanced_features.py  parameter_impact_example.py  rl_training_example.py  simple_evaluation.py
scripts/: README.md  clean-commits.ps1  clean-msg.ps1  clean-msg.txt  clean-msgs.txt  commits-to-rewrite.txt  create_commits.py  rebase-todo.txt  remove-coauthors.ps1  remove-coauthors.sh  remove-trailers.sh  temp-msg.txt
src/: __init__.py
src/agents/: __init__.py  base.py  tracer.py
src/benchmarks/: __init__.py  base.py  task_benchmark.py
src/evaluators/: __init__.py  agent_evaluator.py  base.py
src/metrics/: __init__.py  accuracy.py  adaptability.py  coherence.py  efficiency.py  safety.py  semantic.py
src/rl/: __init__.py  bayesian_optimizer.py  neural_policy.py  policy.py  trainer.py
src/utils/: __init__.py  config.py  logger.py  statistics.py  validation.py
tests/: __init__.py  test_agents.py  test_benchmarks.py  test_config_persistence.py  test_evaluator.py  test_metrics.py  test_optional_components.py  test_pipeline.py  test_rl.py  test_statistics.py  test_utils.py
