[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-llm-eval"
version = "0.3.0"
description = "Lightweight tools for evaluating agent-like LLM workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mohamjad", email = "mohammedamjad526@gmail.com"}
]
urls = { Documentation = "https://github.com/mohamjad/agentic-llm-eval/tree/master/docs", Source = "https://github.com/mohamjad/agentic-llm-eval", Issues = "https://github.com/mohamjad/agentic-llm-eval/issues" }
keywords = ["llm", "evaluation", "agents", "benchmark", "tracing", "tooling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "build>=1.2.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 127
target-version = ["py311"]
